[package]
name = "hammerspace"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
axum = { version = "0.8.1", features = ["multipart"] }
chrono = "0.4.39"
serde_json = "1.0.138"
axum-extra = { version = "0.10.0", features = ["multipart"] }
hyper = { version = "1.6.0", features = ["server"] }
tokio-util = { version = "0.7.13", features = ["io", "io-util"] }
tower-http = { version = "0.6.2", features = ["auth"] }

